# personal_assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
assistant/: __init__.py  actions.py  auth.py  benefits.py  bot.py  catalog.py  config.py  db.py  eval_runner.py  gemini.py  llm.py  main.py  memory.py  metrics.py  opportunities.py  search.py  wallet.py
evals/: benefit_qa.json
tests/: test_core.py
