[project]
name = "personal-assistant"
version = "0.1.0"
description = "Private Telegram personal assistant powered by Groq + Tavily"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
personal-assistant = "assistant.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["assistant*"]
